--- a/test.html
+++ b/test.html
@@ -11,6 +11,9 @@
 <meta name="keywords" content=""/>
 <meta content="" name="author"/>
 <title></title>
+<style>
+.box{width:10.8rem;height: 6rem;background: red;}
+</style>
 <link rel="stylesheet" href="./base.css">
 <script>
 //designWidth:设计稿的实际宽度值，需要根据实际设置
