--- a/video.html
+++ b/video.html
@@ -15,15 +15,13 @@
 			margin-top:130px;
 		}
 	</style>
-	<script src="./video.js"></script>
+	<!-- <script src="./video.js"></script> -->
 </head>
 <body>
 	<div class="video1" id="box"></div>
+	<video src="https://webrtc.woopsss.com:3004/video/41900882558227440.mp4" controls="controls" autoplay="autoplay"></video>
 </body>
 <script>
-	var  player = new QPlayer({
-	  url: "https://img.mycat1314.com/cut/352/F76896933DA6CFAD8420D83E5320E665.m3u8",
-	  container: document.getElementById("box"),
-	});
+	
 </script>
 </html>
