--- a/videoNew/videoNew.html
+++ b/videoNew/videoNew.html
@@ -9,7 +9,7 @@
 			height: 140px;
 			margin-top:30px;
 		}
-		.video1{
+		.example_video_1{
 			width:700px;
 			height: 350px;
 			margin-top:130px;
@@ -20,9 +20,10 @@
 
 </head>
 <body>
+	<video class="example_video_1" src="./19_01_32.flv" autoplay controls="controls"></video>
 	  <video id="example_video_1" class="video-js vjs-default-skin" controls preload="none" width="640" height="264"
          poster="http://vjs.zencdn.net/v/oceans.png">
-    <source src="http://vjs.zencdn.net/v/oceans.mp4" type="video/mp4">
+    <source src="./19_01_32.flv" >
   </video>
 </body>
 <script>
