--- a/test.html
+++ b/test.html
@@ -72,20 +72,17 @@
 </script>
 </head>
 <body>
-	<div class="box">11112232434342322342527533556
+	<div id="box" class="box">
+		<p>12344</p>
+		<video src="./123456.mp4" autoplay="true" controls></video>
 	</div>
 </body>
 	<script>
-		var val = 0;
-		Object.defineProperty(window, 'a', {
-		  get: function() {
-		    return ++val;
-		  }
-		});
-		console.log(val)
-		console.log(a)
-		console.log(a)
-		console.log(a)
+		var box=document.getElementById("box");
+	
+		setTimeout(function(){
+				box.remove();
+		},8000)
 		
 	</script>
 </html>
